# setup_dev_environment

./: .gitignore  Dockerfile  Dockerfile.ci  LICENSE  README.md  docker-compose.yaml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
Linux_distribution/: Linux_distribution.md  README.md
Linux_distribution/Arch_Linux/: README.md
Linux_distribution/Linux_kernel/: Linux_kernel.md
Linux_distribution/shell/: shell.md
Linux_kernel/: README.md
Philosophy_of_design/: Philosophy_of_design.md
android/: README.md
bash/: .bash_profile  .bashrc
computer languages/programming_languages/: programing_languages.md
docs/: index.md
docs/AI/: AI.md  LLM.md  MCP.md  NLP.md
docs/Artifacts/: Artifacts.md
docs/Container Orchestration/: Container Orchestration.md
docs/Containers/: Containers.md  docker.md  podman.md
docs/Data Analyst/: Data Analyst.md
docs/Game Development/: Game-development.md
docs/GitOps/: GitOps.md
docs/Hardware/: Hardware.md  mac.md
network/: README.md
packer/: README.md  debian-install.sh  generate_rockylinux_configs.sh
programing_languages/: README.md  programing_languages.md
scripts/: add_markdown_notes.sh  aws_mfa.py  build_iso.sh  cat_loops.sh  find_and_file.sh  replace_name.sh  setup_watchtower.sh  start.sh  test_robots.py
secutiry/: README.md
shell/: README.md  shell.md
tools/: README.md  tools.md
virtual_machine/: README.md
virtualbox/: guest_os_time_sync.sh  guest_time_sync.sh  host_time_sync.sh  setup_guest_additions.sh
vmware/: guest_os_time_sync.sh  vm.vmx  vmware_cli.sh
(+269 files in other folders)
