[project]
name = "setup-dev-environment"
version = "0.1.0"
description = "prepare my dev enviroment on Linux"
authors = [{ name = "hong", email = "yunghunghuang984@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = ["mkdocs-material>=9.4.2,<10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"