[project]
name = "setup-dev-environment"
version = "0.1.0"
description = "* This is My experience with so many fields.
* Feel free to fork My notes. :)
* Prepare my dev-enviroment on a Unix-like machine(Could be a physical or virtual machine) and use vscode with ssh plugin to connect this.
* mkdocs-material to render *.md files to static web site files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
]
