[project]
name = "setup-dev-environment"
version = "0.1.0"
description = "https://github.com/blackdesert575/setup_devops_environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
]

[dependency-groups]
dev = [
    "boto3>=1.39.12",
]
